--- a/index.html
+++ b/index.html
@@ -13,21 +13,15 @@
       <h1 class="heading">Test Your Memory Here....!</h1>
       <!-- Saving and Taking your name -->
       <label id="nameHead" class="label" for="name"
-        >Enter Your Name Here...</label
-      >
+        > Welcome User ...! Enter Your Name
+      </label>
       <input class="label" id="name" type="text" />
       <div class="btn label">Start Game..!</div>
       <!-- Game-board -->
       <div class="game-board">
-        <h3 class="text">
-          <span class="yourName"></span> , Your score is :
-          <span id="currentScore"></span>
+        <h3 class="text"> 
+         
         </h3>
-        <h3 class="text">
-          <span class="yourName"></span>
-          , your Best Score is : <span id="bestScore"></span>
-        </h3>
-
         <div class="grid">
           <!-- images will be added here -->
         </div>
