--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
       <label id="nameHead" class="label" for="name"
         > Welcome User ...! Enter Your Name
       </label>
+      <p id="not"></p>
+      <div class=" signOut">Sign Out </div>
       <input class="label" id="name" type="text" />
       <div class="btn label">Start Game..!</div>
       <!-- Game-board -->
       <div class="game-board">
-        <h3 class="text"> 
-         
+        <h3 class="main text"> 
+              <!-- Congratulations REsult -->
         </h3>
         <div class="grid">
           <!-- images will be added here -->
@@ -38,7 +40,7 @@
           </ul>
         </div>
       </div>
-    </div>
+    </div>  
   </body>
   <script src="app.js"></script>
 </html>
