--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
       <label id="nameHead" class="label" for="name"
         > Welcome User ...! Enter Your Name
       </label>
-      <p id="not"></p>
-      <div class=" signOut">Sign Out </div>
       <input class="label" id="name" type="text" />
+      <p id="bestscore" class="label"> </p>
       <div class="btn label">Start Game..!</div>
       <!-- Game-board -->
       <div class="game-board">
@@ -39,6 +38,7 @@
             <li>Find all pairs to Win the Game</li>
           </ul>
         </div>
+         <div id= "lowerBtn" class="btn label">Start Game..!</div>
       </div>
     </div>  
   </body>
